--- a/src/components/containers/dashboard/dashboard.css
+++ b/src/components/containers/dashboard/dashboard.css
@@ -3,15 +3,35 @@
 }
 
 .Dashboard hr{
-height: 15px;
+height:2px;
 width: 100%;
-background-color: white;
-margin-top: 0;
+background-color: red;
+margin-top: 10px;
 border: none;
+margin-bottom: 0;
+}
+.MostPopular{   
+    width: 100%;
+    margin-top: 0;
+    color: white;
+    font-size: 30px;
+    padding-left: 10px;
+    background-color:  rgb(255, 0, 0);
 }
 
 .Dashboard h3{  
+    margin-top: 0;
     margin-bottom:0;
-    font-size: 36px;
+    font-size: 40px;
     padding-left: 20px;
+    color: red;
+}
+
+.Dashboard h1{  
+    margin-top:0;
+    font-weight: 400;
+    margin-bottom:0;
+    font-size: 50px;
+    padding-left: 20px;
+    color: rgb(255, 255, 255);
 }
