--- a/src/components/containers/content/Movies/Movie.css
+++ b/src/components/containers/content/Movies/Movie.css
@@ -1,22 +1,20 @@
 .Container{ 
     width: 100%;
-    height: 650px;;
+    height: 600px;
 }
 
 .AllMovies{
     color:white;
-    font-size: 15px;
-    top:830px;
+    font-size: 15px;    
     padding-left: 40px;
     font-size: 20px;
     font-weight: 500;
-    position: absolute;
     cursor: pointer;
-    
+    margin-top:10px;
+    margin-bottom: 10px;
 }
 
 .Movie{
-    position: relative;
     width: 300px;
     height: 300px;
     float: left;
@@ -24,8 +22,11 @@
     background-position: center;
     overflow: hidden;
     text-overflow: ellipsis;
-    
-
+}
+.Fade{
+    width: 300px;
+    height: 300px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0) 40%, black );
 }
 
 .Fade:hover{
@@ -35,9 +36,6 @@
     background-color: rgba(0, 0, 0, 0.616);
     transition-duration: 300ms;
     cursor: pointer;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    
 }
 
 .Title{ 
@@ -64,14 +62,14 @@ font-weight: 400;
 }
 
 .Title h4{ 
-    padding-bottom: 30px;
+    padding-bottom: 32px;
     }
 
 .Description{   
     width: 290px;
-    height: 105px;
+    height:74px;
     color:white;
     overflow: hidden;
     text-overflow: ellipsis;
-
+    
 }
