--- a/src/components/containers/layout/Navbar.css
+++ b/src/components/containers/layout/Navbar.css
@@ -1,8 +1,13 @@
-.NavbarContainer{   
-width: 100%;
-height: 100%;
+/* .NavbarContainer{    
+    border: 10px solid white;
+    width: 100%;
+    height: 100%;
+    background-color: white;
 }
-
+.Navbar{    
+    border: 10px solid white;
+    height: 50%;
+} */
 .Navbar nav{    
     padding: 0;
     margin:0;
@@ -10,6 +15,8 @@ height: 100%;
     width: 100%;
     position: fixed;
     overflow: hidden;
+
+
 }
 .Navbar ul{
     list-style: none;
@@ -70,6 +77,8 @@ height: 100%;
     padding-left: 0;
     margin-top:20px;
     margin-bottom: 0;
+    text-decoration: none;
+    color:white;
 }
 
 .SideBar ul :hover{    
@@ -86,12 +95,17 @@ height: 100%;
     color: white;
     font-size: 20px;
     transition-duration: 200ms;
-    
+}
+
+.SideBar a{ 
+    text-decoration: none;
+    color:white;
 }
 
 .SideBar i{ 
     margin-right: 20px;
-    
+    text-decoration: none;
+    color:white;
 }
 
 .SideBarBtn{ 
