--- a/src/components/containers/Forms/Signup.css
+++ b/src/components/containers/Forms/Signup.css
@@ -1,12 +1,111 @@
 .SignupContainer{   
-    padding-top:200px;
-    border: 5px solid white;
-    width: 80%;
-    background-color: black;
+    display: flex;
+    flex-direction: column;
+    padding-top: 60px;
+}
+
+.Signup{   
+    width: 80%; 
+    margin: auto;
+    background-color: rgb(34, 34, 34);
+    padding-bottom: 200px;
+    padding-top: 10px;
+    }
+    .Signup h3{  
+        margin-top: 0;
+        margin-bottom:0;
+        font-size: 40px;
+        padding-left: 20px;
+        color: rgb(218, 0, 0);
+    }
+    
+    .Signup h1{  
+        margin-top:0;
+        font-weight: 400;
+        margin-bottom:0;
+        font-size: 50px;
+        padding-left: 20px;
+        color: rgb(255, 255, 255);
+    }  
+    .SignupBreak{   
+        width: 100%;
+        height:35px;
+        padding-top:5px;
+        margin-top: 10px;
+        color: white;
+        font-size: 25px;
+        border-top: 1px solid rgb(139, 78, 78);
+        border-bottom: 1px solid rgb(139, 78, 78);
+        background-color:  rgb(218, 0, 0);
+        margin-bottom: 20px;
+    }
+
+.SignupForm{   
+    width: 500px;
+    height: 450px;
+    padding-top:40px; 
+    margin: auto;
+    background-color: white;
+    border-radius: 3px;
+}
+
+.SignupInput{   
+    width: 75%;
+    margin: auto;
+    padding-top: 10px;
+
+}
+
+.SignupInput h4{  
+    color:black;
+    margin-bottom: 3px;
+}
+
+.SignupInput input{  
+    width: 100%;
+    background-color: white;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    border-bottom: 2px solid grey;
+    font-size: 16px;
+    font-weight: 500;
     
 }
 
-.SignupForm{   
-    border: 5px solid white;
-    width: 50%;
+.SignupInput input[type=text]:focus{ 
+outline:none;
+border-bottom: 2px solid black;
+transition-duration: 800ms;
+ }  
+
+ .SignupButton{ 
+     width: 75%;
+     margin: auto;
+ }
+
+ .SignupButton button{ 
+    width: 100%;
+    height: 70px;
+    background-color: rgb(218, 0, 0);
+    border: 1px solid rgb(218, 0, 0);
+    font-size: 20px;
+    color:white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+    transition-duration: 200ms;
+    border-radius: 2px;
+    margin-top: 40px;
+    }
+    
+    .SignupButton button:hover{ 
+        color:white;
+        background-color: rgb(148, 2, 2);
+        border: 2px solid rgb(148, 2, 2);
+        transition-duration: 200ms;
+    }
+    
+    .SignupButton button:focus{  
+        outline: none;
     }
