--- a/src/components/containers/content/Movies/Movie.css
+++ b/src/components/containers/content/Movies/Movie.css
@@ -19,7 +19,6 @@
 }
 
 .Fade:hover{
-    
     width: 300px;
     height: 300px;
     background-color: rgba(0, 0, 0, 0.616);
@@ -71,4 +70,6 @@ font-weight: 400;
     cursor: pointer;
     margin-top:10px;
     margin-bottom: 10px;
+    float: left;
+    
 }
