--- a/src/components/containers/Forms/Signup.css
+++ b/src/components/containers/Forms/Signup.css
@@ -10,7 +10,7 @@
     width: 80%; 
     margin: auto;
     background-color: rgba(8, 8, 8, 0.986);
-    padding-bottom: 200px;
+    padding-bottom: 0;
     padding-top: 10px;
     }
     .Signup h3{  
@@ -44,8 +44,8 @@
 
 .SignupForm{   
     width: 500px;
-    height: 450px;
-    padding-top:40px; 
+    height: 490px;
+    padding-top:10px; 
     margin: auto;
     background-color: rgb(255, 255, 255);
     border-radius: 3px;
@@ -55,6 +55,7 @@
     width: 75%;
     margin: auto;
     padding-top: 10px;
+    
 
 }
 
@@ -72,15 +73,22 @@
     border-bottom: 2px solid grey;
     font-size: 16px;
     font-weight: 500;
-    
 }
+
+.SignupInput ::placeholder{   
+    font-size: 12px;
+    color: rgba(128, 128, 128, 0.623);
+}  
 
 .SignupInput input[type=text]:focus{ 
 outline:none;
 border-bottom: 2px solid black;
 transition-duration: 800ms;
  }  
+.Buttons{
+    width: 100%;
 
+}
  .SignupButton{ 
      width: 75%;
      margin: auto;
@@ -88,7 +96,7 @@ transition-duration: 800ms;
 
  .SignupButton button{ 
     width: 100%;
-    height: 70px;
+    height: 50px;
     background-color: rgb(218, 0, 0);
     border: 1px solid rgb(218, 0, 0);
     font-size: 20px;
@@ -98,7 +106,7 @@ transition-duration: 800ms;
     cursor: pointer;
     transition-duration: 200ms;
     border-radius: 2px;
-    margin-top: 40px;
+    margin-top: 10px ;
     }
     
     .SignupButton button:hover{ 
@@ -110,4 +118,10 @@ transition-duration: 800ms;
     
     .SignupButton button:focus{  
         outline: none;
+    }
+
+    .NewUser h4{   
+        width: 100px;
+        margin: auto;
+        padding-top: 10px;
     }
