--- a/src/components/containers/content/Movies/Movie.css
+++ b/src/components/containers/content/Movies/Movie.css
@@ -69,7 +69,7 @@ font-weight: 400;
     text-overflow: ellipsis;
     
 }
-.AllMovies{
+.AllMovies a{
     color:white;
     font-size: 15px;    
     padding-left: 40px;
@@ -79,5 +79,6 @@ font-weight: 400;
     margin-top:10px;
     margin-bottom: 10px;
     float: left;
+    text-decoration: none;
     
 }
