--- a/src/components/containers/content/Details.css
+++ b/src/components/containers/content/Details.css
@@ -6,6 +6,7 @@
     margin: auto;
     background-color: black;
     border-radius: 5px;
+
 }
 
 .DetailsContainer h2{   
@@ -31,6 +32,38 @@
 .Image{  
     background-size: cover;
     background-position: center;
-    
+}
+.DetailsBtn{    
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.DetailsBtn button{
+    margin: auto;
+    width: 300px;
+    height: 50px;
+    background-color: rgb(218, 0, 0);
+    border: 1px solid rgb(218, 0, 0);
+    font-size: 20px;
+    color:white;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    margin-top:10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+    transition-duration: 200ms;
+    border-radius: 2px;
 
+}
+
+.DetailsBtn button:hover{ 
+    color:white;
+    background-color: rgb(148, 2, 2);
+    border: 2px solid rgb(148, 2, 2);
+    transition-duration: 200ms;
+}
+
+.DetailsBtn button:focus{  
+    outline: none;
 }
