--- a/client/src/components/containers/Forms/Signup.css
+++ b/client/src/components/containers/Forms/Signup.css
@@ -1,4 +1,5 @@
-.SignupContainer{   
+.SignupContainer{ 
+    width: 100%;   
     display: flex;
     flex-direction: column;
     padding-top: 60px;
@@ -47,7 +48,6 @@
     width: 500px;
     height: 390px;
     padding-top:10px; 
-    margin: auto;
     background-color: rgb(255, 255, 255);
     border-radius: 3px;
 }
@@ -55,7 +55,8 @@
 .SignupInput{   
     width: 75%;
     margin: auto;
-    padding-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     
 
 }
@@ -67,6 +68,7 @@
 
 .SignupInput input{  
     width: 100%;
+    height: 40px;
     background-color: white;
     border-top: 0;
     border-right: 0;
@@ -76,10 +78,11 @@
     font-weight: 500;
 }
 
-.SignupInput ::placeholder{   
+.SignupInput input::placeholder{   
     font-size: 12px;
     color: rgba(128, 128, 128, 0.623);
 }  
+
 
 .SignupInput input[type=text]:focus{ 
 outline:none;
@@ -125,4 +128,26 @@ transition-duration: 800ms;
         width: 100px;
         margin: auto;
         padding-top: 10px;
+    }
+
+    .SignupFormContainer{   
+        display:flex;
+        align-items:center;
+        justify-content:center;
+    }
+
+    .FormModal{ 
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        flex-direction: column;
+        position: absolute;
+        width: 500px;
+        height: 390px;
+        padding-top:10px; 
+        background-color: rgb(255, 255, 255);
+        border-radius: 3px;
+    }
+    .FormModal h3{  
+        color:black;
     }
