--- a/client/src/components/containers/Forms/Signup.css
+++ b/client/src/components/containers/Forms/Signup.css
@@ -46,8 +46,8 @@
 
 .SignupForm{   
     width: 500px;
-    height: 390px;
     padding-top:10px; 
+    padding-bottom:30px; 
     background-color: rgb(255, 255, 255);
     border-radius: 3px;
 }
