--- a/client/src/components/containers/content/Details.css
+++ b/client/src/components/containers/content/Details.css
@@ -6,45 +6,63 @@
     margin: auto;
     background-color: black;
     border-radius: 5px;
-
+}
+.DetailsContainer h1{
+    font-size: 40px;
 }
 
 .DetailsContainer h2{   
-    margin: 20px;
+    padding-left:20px; 
+    font-size: 25px;
+    margin:0;
+    font-weight:400; 
 }
 
-.DetailsContainer h2,p{   
+.DetailsContainer p{   
     margin: 20px;
     font-size: 20px;
 }
+
 .DetailsHeader{
     display: flex;
     flex-wrap: wrap;
  }
+
+ .DetailsHeaderAndRate{ 
+     width: 50%;
+ }
+
+ .DetailsHeaderAndVideo{ 
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+ }
+
  .DetailsImageContainer{    
     display: flex;
     flex-direction: row;
     margin: 20px;
-
     justify-content: space-around;
-
  }
+
 .Image{  
     background-size: cover;
     background-position: center;
 }
+
 .DetailsBtn{    
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .DetailsBtn button{
     margin: auto;
-    width: 300px;
+    width: 150px;
     height: 50px;
-    background-color: rgb(218, 0, 0);
-    border: 1px solid rgb(218, 0, 0);
+    background-color:rgb(34, 34, 34);
+    border: 1px solid rgb(34, 34, 34);
     font-size: 20px;
     color:white;
     padding-top: 10px;
@@ -54,16 +72,26 @@
     cursor: pointer;
     transition-duration: 200ms;
     border-radius: 2px;
-
 }
 
 .DetailsBtn button:hover{ 
     color:white;
-    background-color: rgb(148, 2, 2);
-    border: 2px solid rgb(148, 2, 2);
+    background-color: black;
+    border: 2px solid black;
     transition-duration: 200ms;
 }
 
 .DetailsBtn button:focus{  
     outline: none;
+}
+
+.DetailsSummary{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: rgb(218, 0, 0);
+}
+
+.DetailsDescription{
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
